--- a/resource/view/contact.html
+++ b/resource/view/contact.html
@@ -4,9 +4,8 @@
 <title>Contact</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Majestic Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
-<link href="/public/css/all.css" rel='stylesheet' type='text/css' />
+<meta name="keywords" content="工业相机，迈迪微视" />
+<link rel="shortcut icon" href="/favicon.ico" />
 </head>
 <body>
 	<!----start-header---->
