--- a/resource/view/gallery.html
+++ b/resource/view/gallery.html
@@ -4,8 +4,8 @@
 <title>Gallery</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Majestic Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
+<meta name="keywords" content="工业相机，迈迪微视" />
+<link rel="shortcut icon" href="/favicon.ico" />
 <link href="/public/css/all.css" rel='stylesheet' type='text/css' />
 <!---- start-smoth-scrolling---->
 </head>
