--- a/resource/view/about.html
+++ b/resource/view/about.html
@@ -6,6 +6,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="工业相机，迈迪微视" />
 <link rel="shortcut icon" href="/favicon.ico" />
+<link href="/public/css/all.css" rel='stylesheet' type='text/css' />
 </head>
 <body>
 	<!----start-header---->
