--- a/resource/view/index.html
+++ b/resource/view/index.html
@@ -6,7 +6,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="keywords" content="工业相机，迈迪微视" />
 <link rel="shortcut icon" href="/favicon.ico" />
-<link href="/public/css/all.css" rel='stylesheet' type='text/css' />
+<link href="/public/css/all.min.css" rel='stylesheet' type='text/css' />
 <!-- <link href='http://fonts.useso.com/css?family=Titillium+Web:400,200,200italic,300,300italic,400italic,600,600italic,700,700italic,900' rel='stylesheet' type='text/css'> -->
 <!---- start-smoth-scrolling ---->
 </head>
